--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
-    "react-infinite-scroll-component": "^6.1.0"
+    "react-infinite-scroll-component": "^6.1.0",
+    "sharp": "^0.29.3"
   }
 }
